--- a/QJY.WEB/View_Mobile/UI/CRM/UI_CPGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/UI_CPGL_LIST.html
@@ -9,9 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
-    <link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.css" rel="stylesheet" />
     <link href="/View_Mobile/CSS/szhlextend.css?ver=20160904" rel="stylesheet" />
-    <!--<link rel="stylesheet" href="/View_Mobile/CSS/animate.css">-->
 
     <style type="text/css">
         .ms-controller, [ms-controller] {
@@ -47,18 +45,10 @@
                         <div class="ribbon-wrapper-green">
                             <div class="ribbon-green">{{el.TypeName}}</div>
                         </div>
-                        <!--<div class="card-header no-border" ms-on-click="showdetil(el)">
-                            <div class="facebook-avatar"><img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" style="border-radius: 3px;width:32px;height:32px"><div class="cadename" ms-if="!el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div></div>
-                            <div class="facebook-date" ms-if="el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div>
-                            <div class="facebook-date">{{$.timeago(el.CRDate)}}</div>
-                            <div class="facebook-date">{{el.CRDate|date("MM月dd日")}}</div>
-                            <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.Name)}}</div>
-                            <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.BianHao)}}</div>
-                            <div style="clear:both"></div>
-                        </div>-->
+
                         <div class="card-header no-border" ms-on-click="showdetil(el)">
                             <div class="facebook-avatar">
-                                <img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" width="40" class="border-r">
+                                <img ms-src="{{ComFunJS.getfile()+'&type=TX&user='+el.CRUser}}" width="40" class="border-r">
                             </div>
                             <div class="facebook-date head-ft16">{{ComFunJS.convuser(el.CRUser)}}<span class="ml10 c999 ft14" ms-if="!el.isfold">{{$.timeago(el.CRDate)}}</span></div>
                             <div class="facebook-date head-ft16" ms-if="el.isfold"><span class="c999 ft14">{{el.CRDate|date("MM月dd日")}}</span></div>
@@ -73,7 +63,7 @@
                             <div style="clear:both"></div>
                         </div>
                         <div class="card-content  " ms-visible="el.isfold">
-                           
+
                             <div class="card-item">
                                 <span class="c999 title-item">产品名称：</span>
                                 <span>{{el.Name}}</span>
@@ -112,10 +102,10 @@
                             </div>
                             <ul class="filelist" style="margin-left:.5rem;">
                                 <li ms-repeat-file="el.FileList">
-                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}">
+                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)">
                                     <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                 </li>
-                            </ul> 
+                            </ul>
                             <div class="buttons-tab list-op">
                                 <a class="tab-link button external" ms-click="editCPGL(el)" ms-if="nowuser==el.CRUser">
                                     <i class="iconfont icon-bianji2"></i>编辑
@@ -125,10 +115,7 @@
                                 </a>
                             </div>
                         </div>
-                        <!--<div class="card-footer no-border" style="display:-webkit-box;padding:0">
-                            <a href="#" ms-click="editCPGL(el)" ms-if="nowuser==el.CRUser"><i class="fa fa-edit"></i>&nbsp;编辑&nbsp;</a>
-                            <a href="#" ms-click="delCPGL(el)" ms-if="nowuser==el.CRUser"><i class="fa fa-gear"></i>&nbsp;删除&nbsp;</a>
-                        </div>-->
+
                     </div>
                     <div class="card facebook-card animated" ms-if="loadtip">
                         <div class="card-header no-border">
@@ -141,13 +128,10 @@
                 </div>
             </div>
 
-            <!--<span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="addCPGL()" id="plus_btn" style="z-index:99998;opacity:.9"><img src="/View_Mobile/images/plus_icon.png"></span>
-            <span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="changefold()" id="plus_list" style="z-index:99998;opacity:.9"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'rwglss':'rwglzk')+'.png'"></span>-->
             <div class="right-panel">
                 <ul>
                     <li>
 
-                        <!--<a class="mod-li-icon" ms-if="DataID!='-1'" ms-click="viewall()"><img src="/View_Mobile/images/plus-zhankai.png"></a>-->
                         <a class="mod-li-icon" ms-if="DataID=='-1'" ms-click="changefold()"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'plus-zhedie':'plus-zhankai')+'.png'" src="/View_Mobile/images/plus-zhedie.png"></a>
 
 
@@ -170,7 +154,7 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/touch/toucher.js"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
     <script>
@@ -204,23 +188,22 @@
                 //路由加载
                 window.location = "/View_Mobile/UI/BASE/APP_MOBIL_WF.html?FormCode=CPGL&id=" + el.ID + "&r=" + Math.random();
             },
-            delCPGL: function (el) { 
+            delCPGL: function (el) {
                 if (event.stopPropagation) {
                     event.stopPropagation();
                 }
                 $.confirm("确认要删除吗", function () {
                     $.post('/API/VIEWAPI.ashx?Action=CRM_DELCPBYID', { "P1": el.ID }, function (result) {
-                        result = JSON.parse(result)
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
                             model.ctData.remove(el);
                             if (model.ctData.size() == 0) {
                                 model.loadtip = '没有找到数据哦'
                             }
-                        } 
+                        }
                     })
                 }
-               ) 
+               )
 
             },
             loadMore: function () {
