--- a/QJY.WEB/View_Mobile/UI/CRM/UI_GJJL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/UI_GJJL_LIST.html
@@ -9,9 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
-    <link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.css" rel="stylesheet" />
     <link href="/View_Mobile/CSS/szhlextend.css?ver=20160904" rel="stylesheet" />
-    <!--<link rel="stylesheet" href="/View_Mobile/CSS/animate.css">-->
 
     <style type="text/css">
         .ms-controller, [ms-controller] {
@@ -47,18 +45,10 @@
 
                     <div class="card facebook-card animated fadeInUp" ms-repeat-el="ctData">
                         <div class="ribbon-wrapper-green"><div class="ribbon-green">{{el.GJZT}}</div></div>
-                        <!--<div class="card-header no-border" ms-on-click="showdetil(el)">
-                            <div class="facebook-avatar"><img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" style="border-radius: 3px;width:32px;height:32px"><div class="cadename" ms-if="!el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div></div>
-                            <div class="facebook-date" ms-if="el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div>
-                            <div class="facebook-date">{{$.timeago(el.CRDate)}}</div>
-                            <div class="facebook-date">{{el.CRDate|date("MM月dd日")}}</div>
-                            <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.KHName)}}</div>
-                            <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.Details)}}</div>
-                            <div style="clear:both"></div>
-                        </div>-->
+                    
                         <div class="card-header no-border" ms-on-click="showdetil(el)">
                             <div class="facebook-avatar">
-                                <img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" width="40" class="border-r">
+                                <img ms-src="{{ComFunJS.getfile()+'&type=TX&user='+el.CRUser}}" width="40" class="border-r">
                             </div>
                             <div class="facebook-date head-ft16">{{ComFunJS.convuser(el.CRUser)}}<span class="ml10 c999 ft14" ms-if="!el.isfold">{{$.timeago(el.CRDate)}}</span></div>
                             <div class="facebook-date head-ft16" ms-if="el.isfold"><span class="c999 ft14">{{el.CRDate|date("MM月dd日")}}</span></div>
@@ -73,11 +63,7 @@
                             <div style="clear:both"></div>
                         </div>
                         <div class="card-content  " ms-visible="el.isfold">
-                            <!--<div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;"><span style="color:gray">客户：</span> {{el.KHName?el.KHName:'无'}}</div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;"><span style="color:gray">状态：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.GJZT}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Details"><span style="color:gray">描述：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Details|html}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Type"><span style="color:gray">方式：</span> {{el.Type}}</div>-->
-
+                        
                             <div class="card-item">
                                 <span class="c999">客户：</span>
                                 <span>{{el.KHName?el.KHName:'无'}}</span>
@@ -94,12 +80,10 @@
                                 <span class="c999">方式：</span>
                                 <span>{{el.Type}}</span>
                             </div>
-                            <!--<div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.IsTX"><span style="color:gray">提醒：</span> {{el.IsTX=='Y'?'是':'否'}}</div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.TXDate"><span style="color:gray">提醒时间：</span>{{el.TXDate|date("yyyy-MM-dd HH:mm")}}</div>-->
-                            <div class="card-content-inner" style="padding-top: 0; padding-top: 0.4rem; padding-bottom: 0;" ms-if="el.Files">
+                                   <div class="card-content-inner" style="padding-top: 0; padding-top: 0.4rem; padding-bottom: 0;" ms-if="el.Files">
                                 <ul class="filelist">
                                     <li ms-repeat-file="el.FileList">
-                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" />
+                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
                                         <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                     </li>
                                 </ul>
@@ -126,13 +110,10 @@
                 </div>
             </div>
 
-            <!--<span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="addGJJL()" id="plus_btn" style="z-index:99998;opacity:.9"><img src="/View_Mobile/images/plus_icon.png"></span>
-            <span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="changefold()" id="plus_list" style="z-index:99998;opacity:.9"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'rwglss':'rwglzk')+'.png'"></span>-->
-            <div class="right-panel">
+                   <div class="right-panel">
                 <ul>
                     <li>
 
-                        <!--<a class="mod-li-icon" ms-if="DataID!='-1'" ms-click="viewall()"><img src="/View_Mobile/images/plus-zhankai.png"></a>-->
                         <a class="mod-li-icon" ms-if="DataID=='-1'" ms-click="changefold()"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'plus-zhedie':'plus-zhankai')+'.png'" src="/View_Mobile/images/plus-zhedie.png"></a>
 
 
@@ -156,7 +137,7 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/touch/toucher.js"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
     <script>
@@ -199,7 +180,6 @@
             delGJJL: function (el) {
                 $.confirm("确认要删除吗", function () {
                     $.post('/API/VIEWAPI.ashx?Action=CRM_DELGJJL', { "P1": el.ID }, function (result) {
-                        result = JSON.parse(result)
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
                             model.ctData.remove(el);
