--- a/QJY.WEB/View_Mobile/UI/CRM/UI_HTGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/UI_HTGL_LIST.html
@@ -42,17 +42,10 @@
                 <div class="list-container">
                     <div class="card facebook-card animated fadeInUp" ms-repeat-el="ctData">
                         <div class="ribbon-wrapper-green"><div class="ribbon-green">{{el.TypeName}}</div></div>
-                        <!--<div class="card-header no-border" ms-on-click="showdetil(el)">
-                            <div class="facebook-avatar"><img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" style="border-radius: 3px;width:32px;height:32px"><div class="cadename" ms-if="!el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div></div>
-                            <div class="facebook-date" ms-if="el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div>
-                            <div class="facebook-date">{{$.timeago(el.CRDate)}}</div>
-                            <div class="facebook-date">{{el.CRDate|date("MM月dd日")}}</div>
-                            <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.Title)}}</div>
-                            <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.HTStatus}}</div>
-                        </div>-->
+
                         <div class="card-header no-border" ms-on-click="showdetil(el)">
                             <div class="facebook-avatar">
-                                <img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" width="40" class="border-r">
+                                <img ms-src="{{ComFunJS.getfile()+'&type=TX&user='+el.CRUser}}" width="40" class="border-r">
                             </div>
                             <div class="facebook-date head-ft16">{{ComFunJS.convuser(el.CRUser)}}<span class="ml10 c999 ft14" ms-if="!el.isfold">{{$.timeago(el.CRDate)}}</span></div>
                             <div class="facebook-date head-ft16" ms-if="el.isfold"><span class="c999 ft14">{{el.CRDate|date("MM月dd日")}}</span></div>
@@ -88,41 +81,13 @@
                             <div class="card-item" ms-if="el.Files">
                                 <ul class="filelist">
                                     <li ms-repeat-file="el.FileList">
-                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" />
+                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
                                         <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                     </li>
                                 </ul>
                             </div>
 
-                            <!--<div class="buttons-tab">
-                                <a href="#" ms-on-click="getpldata(el,1)" class="tab-link button external" ms-class-1="active:el.pltype=='1'">跟进记录</a>
-                                <a href="#" class="tab-link button external"></a>
-                                <a href="#" class="tab-link button external"></a>
-                                <a href="#" class="tab-link button external"></a>
-                            </div>
 
-                            <div class="list-container">
-                                <div class="card facebook-card animated fadeInUp" ms-repeat-itemgjjl="el.GJJL" ms-visible="el.pltype=='1'">
-                                    <div class="card-header no-border">
-                                        <div class="facebook-avatar"><img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{itemgjjl.CRUser}}" style="border-radius: 3px;width:32px;height:32px"></div>
-                                        <div class="facebook-date">{{ComFunJS.convuser(itemgjjl.CRUser)}}</div>
-                                        <div class="facebook-date">{{$.timeago(itemgjjl.CRDate)}}</div>
-                                    </div>
-                                    <div class="card-content  ">
-                                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="itemgjjl.Details"><span style="color:gray">描述：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{itemgjjl.Details|html}}</span></div>
-                                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="itemgjjl.Type"><span style="color:gray">方式：</span> {{itemgjjl.Type}}</div>
-                                        <div class="card-content-inner" style="padding-top: 0; padding-top: 0.4rem; padding-bottom: 0;" ms-if="itemgjjl.Files">
-                                            <ul class="filelist">
-                                                <li ms-repeat-file="itemgjjl.FileList">
-                                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" />
-                                                    <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div ms-if="el.GJJL.size()==0" class="card-content-inner" style="padding-bottom:0;padding-top: 0.4rem;" ms-if="el.TypeName"><span style="color:gray">暂无数据</span> </div>
-                            </div>-->
 
                             <div ms-visible="el.GJJL.size()>0">
                                 <div class="lookright-box">
@@ -149,7 +114,7 @@
                                                     </h3>
                                                     <ul class="filelist">
                                                         <li ms-repeat-file="pl.FileList">
-                                                            <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" />
+                                                            <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
                                                             <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                                         </li>
                                                     </ul>
@@ -171,7 +136,7 @@
                                     <i class="iconfont icon-remove"></i>删除
                                 </a>
                             </div>
-                            
+
                         </div>
                         <!--<div class="card-footer no-border" style="display:-webkit-box;padding:0">
                             <a href="#" ms-click="addGJ(el)">&nbsp;跟进&nbsp;</a>
@@ -189,13 +154,10 @@
                     <div class="preloader"></div>
                 </div>
             </div>
-            <!--<span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="addHTGL()" id="plus_btn" style="z-index:99998;opacity:.9"><img src="/View_Mobile/images/plus_icon.png"></span>
-            <span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="changefold()" id="plus_list" style="z-index:99998;opacity:.9"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'rwglss':'rwglzk')+'.png'"></span>-->
             <div class="right-panel">
                 <ul>
                     <li>
 
-                        <!--<a class="mod-li-icon" ms-if="DataID!='-1'" ms-click="viewall()"><img src="/View_Mobile/images/plus-zhankai.png"></a>-->
                         <a class="mod-li-icon" ms-if="DataID=='-1'" ms-click="changefold()"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'plus-zhedie':'plus-zhankai')+'.png'" src="/View_Mobile/images/plus-zhedie.png"></a>
 
 
@@ -218,11 +180,11 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/touch/toucher.js"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
     <script>
-      
+
         var model = avalon.define({
             $id: "UI_HTGL_LIST",
             ctData: [],//数据源
@@ -263,7 +225,6 @@
                 }
                 $.confirm("确认要删除吗", function () {
                     $.post('/API/VIEWAPI.ashx?Action=CRM_DELHTBYID', { "P1": el.ID }, function (result) {
-                        result = JSON.parse(result)
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
                             model.ctData.remove(el);
