--- a/QJY.WEB/View_Mobile/UI/CRM/UI_KHGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/UI_KHGL_LIST.html
@@ -9,9 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
-    <!--<link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.css" rel="stylesheet" />-->
     <link href="/View_Mobile/CSS/szhlextend.css?ver=20160904" rel="stylesheet" />
-    <!--<link rel="stylesheet" href="/View_Mobile/CSS/animate.css">-->
 
     <style type="text/css">
         .ms-controller, [ms-controller] {
@@ -47,17 +45,8 @@
                 <div class="list-container">
 
                     <div class="card facebook-card animated fadeInUp no-head" ms-repeat-el="ctData">
-                        <!--<div class="ribbon-wrapper-green"><div class="ribbon-green">{{el.TypeName?el.TypeName:'无'}}</div></div>-->
                         <div class="ribbon-wrapper-green" ms-if="el.TypeName"><div class="ribbon-green">{{el.TypeName}}</div></div>
-                        <!--<div class="card-header no-border" ms-on-click="showdetil(el)">
-            <div class="facebook-avatar"><img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" style="border-radius: 3px;width:32px;height:32px"><div class="cadename" ms-if="!el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div></div>
-            <div class="facebook-date" ms-if="el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div>
-            <div class="facebook-date">{{$.timeago(el.CRDate)}}</div>
-            <div class="facebook-date">{{el.CRDate|date("MM月dd日")}}</div>
-            <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.KHName)}}</div>
-            <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.TelePhone)}}</div>
-            <div style="clear:both"></div>
-        </div>-->
+                       
                         <div class="card-header no-border" ms-class-1="no-bottom:el.isfold" ms-on-click="showdetil(el)" ms-class-1="no-bottom:el.isfold" >
                           
                             <div class="facebook-date">
@@ -97,7 +86,7 @@
                             <div class="card-item" ms-if="el.Files">
                                 <ul class="filelist">
                                     <li ms-repeat-file="el.FileList">
-                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" />
+                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
                                         <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                     </li>
                                 </ul>
@@ -136,7 +125,7 @@
                                                         <div class="card-content-inner" style="padding-top: 0; padding-top: 0.4rem; padding-bottom: 0;" ms-if="itemlxr.Files">
                                                             <ul class="filelist">
                                                                 <li ms-repeat-file="itemlxr.FileList">
-                                                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" />
+                                                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
                                                                     <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                                                 </li>
                                                             </ul>
@@ -161,7 +150,7 @@
                                                     </h3>
                                                     <ul class="filelist">
                                                         <li ms-repeat-file="pl.FileList">
-                                                            <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" />
+                                                            <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
                                                             <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                                         </li>
                                                     </ul>
@@ -186,7 +175,7 @@
                                                         <div class="card-content-inner" style="padding-top: 0; padding-top: 0.4rem; padding-bottom: 0;" ms-if="itemht.Files">
                                                             <ul class="filelist">
                                                                 <li ms-repeat-file="itemht.FileList">
-                                                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" />
+                                                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
                                                                     <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                                                 </li>
                                                             </ul>
@@ -213,15 +202,7 @@
                                 </a>
                             </div>
                         </div>
-                        <!--<div class="card-footer no-border" style="display:-webkit-box;padding:0">
-            <a href="#" ms-click="vieww(el)"><i class="fa fa-comment-o"></i>&nbsp;查看&nbsp;</a>
-            <a href="#" ms-click="editKHGL(el)" ms-if="nowuser==el.CRUser"><i class="fa fa-edit"></i>&nbsp;编辑&nbsp;</a>
-            <a href="#" ms-click="delKHGL(el)" ms-if="nowuser==el.CRUser"><i class="fa fa-gear"></i>&nbsp;删除&nbsp;</a>
-            <a href="#" ms-click="addGJ(el)" ><i class="fa fa-gear"></i>&nbsp;新增跟进&nbsp;</a>
-            <a href="#" ms-click="addLXR(el)" ><i class="fa fa-gear"></i>&nbsp;新增联系人&nbsp;</a>
-            <a href="#" ms-click="addHT(el)" ><i class="fa fa-gear"></i>&nbsp;新增合同&nbsp;</a>
-            <a href="#" ms-click="moreaction(el,this)"><i class="fa fa-gear"></i>&nbsp;新增&nbsp;</a>
-        </div>-->
+
 
                     </div>
                     <div class="card facebook-card animated" ms-if="loadtip">
@@ -233,9 +214,7 @@
                         <div class="preloader"></div>
                     </div>
                 </div>
-                <!--<span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="show()" style="z-index:99998;opacity:.9"><img src="../../images/plus-serch.png"></span>
-                <span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="addKHGL()" id="plus_btn" style="z-index:99998;opacity:.9"><img src="/View_Mobile/images/plus_icon.png"></span>
-                <span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="changefold()" id="plus_list" style="z-index:99998;opacity:.9"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'rwglss':'rwglzk')+'.png'"></span>-->
+
                 <div class="right-panel">
                     <ul>
                         <li>
@@ -244,7 +223,6 @@
                         </li>
                         <li>
 
-                            <!--<a class="mod-li-icon" ms-if="DataID!='-1'" ms-click="viewall()"><img src="/View_Mobile/images/plus-zhankai.png"></a>-->
                             <a class="mod-li-icon" ms-if="DataID=='-1'" ms-click="changefold()"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'plus-zhedie':'plus-zhankai')+'.png'" src="/View_Mobile/images/plus-zhedie.png"></a>
 
 
@@ -279,7 +257,7 @@
         <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
         <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
         <script src="/View_Mobile/JS/touch/toucher.js"></script>
-        <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+        <script src="/View_Mobile/JS/avalon1.47.js"></script>
         <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
         <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
         <script>
@@ -345,7 +323,6 @@
                 delKHGL: function (el) {
                     $.confirm("确认要删除客户吗，删除后客户下的联系人、合同、跟进记录都将删除", function () {
                         $.post('/API/VIEWAPI.ashx?Action=CRM_DELKHGL', { "P1": el.ID }, function (result) {
-                            result = JSON.parse(result)
                             if (result.ErrorMsg == "") {
                                 ComFunJS.winsuccess("删除成功");
                                 model.ctData.remove(el);
