--- a/QJY.WEB/View_Mobile/UI/CRM/UI_KHLXR_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/UI_KHLXR_LIST.html
@@ -9,9 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
-    <link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.css" rel="stylesheet" />
     <link href="/View_Mobile/CSS/szhlextend.css?ver=20160904" rel="stylesheet" />
-    <!--<link rel="stylesheet" href="/View_Mobile/CSS/animate.css">-->
 
     <style type="text/css">
         .ms-controller, [ms-controller] {
@@ -30,7 +28,6 @@
                 width: 100%;
                 height: auto;
             }
-
     </style>
 </head>
 <body ms-controller="LXRList">
@@ -46,20 +43,9 @@
                 <div class="list-container">
 
                     <div class="card facebook-card animated fadeInUp no-head" ms-repeat-el="ctData">
-                        <!--<div class="ribbon-wrapper-green" style="width:65px;height:68px;top: -2px;right: -2px;"><div class="ribbon-green" style="top: 10px;width: 100px;    padding: 4px;font-size:11px">{{el.KHName?el.KHName:'无'}}</div></div>-->
-                        <!--<div class="card-header no-border" ms-on-click="showdetil(el)">
-                            <div class="facebook-avatar"><img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" style="border-radius: 3px;width:32px;height:32px"><div class="cadename" ms-if="!el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div></div>
-                            <div class="facebook-date" ms-if="el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div>-->
-                            <!--<div class="facebook-date">{{$.timeago(el.CRDate)}}</div>-->
-                            <!--<div class="facebook-date">{{el.CRDate|date("MM月dd日")}}</div>-->
-                            <!--<div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.UserXM)}}<a external style=" padding-left:.4rem;"></a>{{covtitle(el.TelePhone)}}</div>-->
-                            <!--<div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.TelePhone)}}</div>-->
-                            <!--<div style="clear:both"></div>
-                        </div>-->
+
                         <div class="card-header no-border " ms-class-1="no-bottom:el.isfold" ms-on-click="showdetil(el)">
-                            <!--<div class="facebook-avatar" ms-if="!el.isfold">
-            <img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" width="40" class="border-r">
-        </div>-->
+
                             <div class="facebook-date head-ft16">
                                 <span class="c999 title-item">对应客户：</span>
                                 <span>{{el.KHName?el.KHName:'无'}}</span>
@@ -73,32 +59,22 @@
                                 <span class="c999 title-item">联系电话：</span>
                                 <span><a ms-attr-href="tel:{{el.TelePhone}}" external>{{el.TelePhone}}</a></span>
                                 <span class="tell-meil">
-                                <a ms-attr-href="tel:{{el.TelePhone}}" external><img src="/View_Mobile/Images/phone-plusp.png" /></a>
-                                <a ms-attr-href="sms:{{el.TelePhone}}" external><img src="/View_Mobile/Images/phone-plusm.png"  /></a></span>     
+                                    <a ms-attr-href="tel:{{el.TelePhone}}" external><img src="/View_Mobile/Images/phone-plusp.png" /></a>
+                                    <a ms-attr-href="sms:{{el.TelePhone}}" external><img src="/View_Mobile/Images/phone-plusm.png" /></a>
+                                </span>
                             </div>
                             <style>
-                               
+
                             </style>
                             <div style="clear:both"></div>
                         </div>
                         <div class="card-content  " ms-visible="el.isfold">
-                            <!--<div class="card-item">
-                                <span class="c999 title-item">对应客户：</span>
-                                <span>{{el.KHName?el.KHName:'无'}}</span>
-                            </div>
-                            <div class="card-item">
-                                <span class="c999 title-item">姓名：</span>
-                                <span>{{el.UserXM}}</span>
-                            </div>-->
+
                             <div class="card-item" ms-if="el.UserSex">
                                 <span class="c999 title-item">性别：</span>
                                 <span>{{el.UserSex}}</span>
                             </div>
-                            <!--<div class="card-item">
-                                <span class="c999 title-item">手机：</span>
-                                <span><a ms-attr-href="tel:{{el.TelePhone}}" external><i class="fa  fa-mobile-phone"></i>{{el.TelePhone}}</a></span>
-                                <span ><a ms-attr-href="tel:{{el.TelePhone}}" external><img src="/View_Mobile/Images/phone-plus.png" style="height:1rem !important;width:1rem !important;display:inline-block" /></a><a ms-attr-href="sms:{{el.TelePhone}}" external style=" padding-left:.4rem;"><img src="/View_Mobile/Images/phone-plus3.png" style="height: 1rem !important; width: 1rem !important; display: inline-block; " /></a></span>                          
-                            </div>-->
+
                             <div class="card-item" ms-if="el.MobilePhone">
                                 <span class="c999 title-item">电话：</span>
                                 <span>{{el.MobilePhone}}</span>
@@ -176,36 +152,11 @@
                                 <span class="c999 title-item">{{ext.TableFiledName}}：</span>
                                 <span>{{ext.ExtendDataValue}}</span>
                             </div>
-                            <!--<div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;"><span style="color:gray">对应客户：</span> {{el.KHName?el.KHName:'无'}}</div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;"><span style="color:gray">姓名：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.UserXM}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.UserSex"><span style="color:gray">性别：</span> {{el.UserSex}}</div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem; display: -webkit-box;-webkit-box-orient: horizontal;">
-                                 <span style="color:gray">手机：<a ms-attr-href="tel:{{el.TelePhone}}" external><i class="fa  fa-mobile-phone"></i>{{el.TelePhone}}</a> </span>
-                                 <span><a ms-attr-href="tel:{{el.TelePhone}}" external><img src="/View_Mobile/Images/phone-plus.png" style="height:1rem !important;width:1rem !important;" /></a><a ms-attr-href="sms:{{el.TelePhone}}" external style=" padding-left:.4rem;"><img src="/View_Mobile/Images/phone-plus3.png" style="height:1rem !important;width:1rem !important;" /></a></span>                          
-                            </div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.MobilePhone"><span style="color:gray">电话：</span> {{el.MobilePhone}}</div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Extension"><span style="color:gray">分机：</span> {{el.Extension}}</div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.FixNo"><span style="color:gray">传真：</span>{{el.FixNo}}</div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Education"><span style="color:gray">学历：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Education}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Company"><span style="color:gray">公司：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Company}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Department"><span style="color:gray">部门：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Department}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Position"><span style="color:gray">职位：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Position}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.EMail"><span style="color:gray">邮箱：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.EMail}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Mailbox"><span style="color:gray">信箱：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Mailbox}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.QQ"><span style="color:gray">QQ：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.QQ}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Weixin"><span style="color:gray">微信：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Weixin}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.WebSite"><span style="color:gray">网址：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.WebSite}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Address"><span style="color:gray">地址：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Address}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.PostCode"><span style="color:gray">邮编：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.PostCode}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Birthday"><span style="color:gray">生日：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Birthday|date('yyyy-MM-dd')}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Others"><span style="color:gray">其他：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Others|html}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Remark"><span style="color:gray">备注：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Remark|html}}</span></div>
-                            <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-repeat-ext="el.SubExt"><span style="color:gray">{{ext.TableFiledName}}：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{ext.ExtendDataValue}}</span></div>-->
 
                             <div class="card-content-inner" style="padding-top: 0; padding-top: 0.4rem; padding-bottom: 0;" ms-if="el.Files">
                                 <ul class="filelist">
                                     <li ms-repeat-file="el.FileList">
-                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" />
+                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
                                         <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                     </li>
                                 </ul>
@@ -221,10 +172,7 @@
                             </div>
 
                         </div>
-                        <!--<div class="card-footer no-border" style="display:-webkit-box;padding:0" >
-                            <a href="#" ms-click="editLXR(el)" ms-if="nowuser==el.CRUser"><i class="fa fa-edit"></i>&nbsp;编辑&nbsp;</a>
-                            <a href="#" ms-click="delLXR(el)" ms-if="nowuser==el.CRUser"><i class="fa fa-gear"></i>&nbsp;删除&nbsp;</a>
-                        </div>-->
+
                     </div>
                     <div class="card facebook-card animated" ms-if="loadtip">
                         <div class="card-header no-border">
@@ -236,9 +184,6 @@
                     <div class="preloader"></div>
                 </div>
             </div>
-            <!--<span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="show()" style="z-index:99998;opacity:.9"><img src="../../images/plus-serch.png"></span>
-            <span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="addLXR()" id="plus_btn" style="z-index:99998;opacity:.9"><img src="/View_Mobile/images/plus_icon.png"></span>
-            <span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="changefold()" id="plus_list" style="z-index:99998;opacity:.9"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'rwglss':'rwglzk')+'.png'"></span>-->
             <div class="right-panel">
                 <ul>
                     <li>
@@ -247,7 +192,6 @@
                     </li>
                     <li>
 
-                        <!--<a class="mod-li-icon" ms-if="DataID!='-1'" ms-click="viewall()"><img src="/View_Mobile/images/plus-zhankai.png"></a>-->
                         <a class="mod-li-icon" ms-if="DataID=='-1'" ms-click="changefold()"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'plus-zhedie':'plus-zhankai')+'.png'" src="/View_Mobile/images/plus-zhedie.png"></a>
 
 
@@ -282,11 +226,11 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/touch/toucher.js"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
     <script>
-     
+
         var model = avalon.define({
             $id: "LXRList",
             ctData: [],//数据源
@@ -345,14 +289,13 @@
             delLXR: function (el) {
                 $.confirm("确认要删除吗", function () {
                     $.post('/API/VIEWAPI.ashx?Action=CRM_DELKHLXR', { "P1": el.ID }, function (result) {
-                        result = JSON.parse(result)
                         if (result.ErrorMsg == "") {
                             ComFunJS.winsuccess("删除成功");
                             model.ctData.remove(el);
                             if (model.ctData.size() == 0) {
                                 model.loadtip = '没有找到数据哦'
                             }
-                        } 
+                        }
                     })
                 })
             },
