--- a/QJY.WEB/View_Mobile/UI/CRM/UI_KHMP_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/UI_KHMP_LIST.html
@@ -30,7 +30,6 @@
                 width: 100%;
                 height: auto;
             }
-
     </style>
 </head>
 <body ms-controller="MPList">
@@ -44,16 +43,7 @@
                 <div class="list-container">
 
                     <div class="card facebook-card animated fadeInUp" ms-repeat-el="ctData">
-                        <!--<div class="ribbon-wrapper-green" style="width:65px;height:68px;top: -2px;right: -2px;"><div class="ribbon-green" style="top: 10px;width: 100px;    padding: 4px;font-size:11px">{{el.KHName?el.KHName:'无'}}</div></div>-->
-                        <!--<div class="card-header no-border" ms-on-click="showdetil(el)" ms-visible="DataID=='-1'">
-                        <div class="facebook-avatar"><img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" style="border-radius: 3px;width:32px;height:32px"><div class="cadename" ms-if="!el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div></div>
-                        <div class="facebook-date" ms-if="el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div>-->
-                        <!--<div class="facebook-date">{{$.timeago(el.CRDate)}}</div>-->
-                        <!--<div class="facebook-date">{{el.CRDate|date("MM月dd日")}}</div>
-                        <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.UserXM)}}</div>
-                        <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.TelePhone)}}</div>
-                        <div style="clear:both"></div>
-                    </div>-->
+
                         <div class="card-header no-border" ms-on-click="showdetil(el)">
                             <div class="facebook-avatar">
                                 <img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{el.CRUser}}" width="40" class="border-r">
@@ -156,27 +146,6 @@
                                 <span class="c999 title-item">客户状态：</span>
                                 <span>{{el.Status=='1'?'已保存':'未保存'}}</span>
                             </div>
-                            <!--<div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;"><span style="color:gray">姓名：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.UserXM}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.UserSex"><span style="color:gray">性别：</span> {{el.UserSex}}</div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;"><span style="color:gray">手机：</span> {{el.TelePhone}}</div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.MobilePhone"><span style="color:gray">电话：</span> {{el.MobilePhone}}</div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Extension"><span style="color:gray">分机：</span> {{el.Extension}}</div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.FixNo"><span style="color:gray">传真：</span>{{el.FixNo}}</div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Education"><span style="color:gray">学历：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Education}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Company"><span style="color:gray">公司：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Company}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Department"><span style="color:gray">部门：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Department}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Position"><span style="color:gray">职位：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Position}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.EMail"><span style="color:gray">邮箱：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.EMail}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Mailbox"><span style="color:gray">信箱：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Mailbox}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.QQ"><span style="color:gray">QQ：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.QQ}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Weixin"><span style="color:gray">微信：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Weixin}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.WebSite"><span style="color:gray">网址：</span><span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.WebSite}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Address"><span style="color:gray">地址：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Address}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.PostCode"><span style="color:gray">邮编：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.PostCode}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Birthday"><span style="color:gray">生日：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Birthday|date('yyyy-MM-dd')}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Others"><span style="color:gray">其他：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Others|html}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;" ms-if="el.Remark"><span style="color:gray">备注：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Remark|html}}</span></div>
-                        <div class="card-content-inner" style="padding-bottom:0;    padding-top: 0.4rem;"><span style="color:gray">状态：</span> <span style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{el.Status=='1'?'已保存':'未保存'}}</span></div>-->
                             <div class="card-content-inner" style="padding-top: 0; padding-top: 0.4rem; padding-bottom: 0;" ms-if="el.Files">
                                 <ul class="filelist">
                                     <li ms-repeat-file="el.FileList">
@@ -204,7 +173,7 @@
             </div>
 
             <!--<span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="addMP()" id="plus_btn" style="z-index:99998;opacity:.9"><img src="/View_Mobile/images/plus_icon.png"></span>
-        <span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="changefold()" id="plus_list" style="z-index:99998;opacity:.9"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'rwglss':'rwglzk')+'.png'"></span>-->
+            <span class="animated fadeIn" ms-if="DataID=='-1'" ms-click="changefold()" id="plus_list" style="z-index:99998;opacity:.9"><img ms-attr-src="'/View_Mobile/images/'+(isfold?'rwglss':'rwglzk')+'.png'"></span>-->
             <div class="right-panel">
                 <ul>
                     <li>
@@ -223,9 +192,9 @@
 
             </div>
         </div>
-        </div>
-        <div class="page" id="pageindex2">
-        </div>
+    </div>
+    <div class="page" id="pageindex2">
+    </div>
     </div>
     <script src="/View_Mobile/JS/layer/layer.m.js"></script>
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
@@ -233,11 +202,11 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/touch/toucher.js"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
     <script>
-    
+
         var model = avalon.define({
             $id: "MPList",
             ctData: [],//数据源
@@ -283,7 +252,7 @@
                             if (model.ctData.size() == 0) {
                                 model.loadtip = '没有找到数据哦'
                             }
-                        } 
+                        }
                     })
                 })
             },
