--- a/QJY.WEB/View_Mobile/UI/CRM/index.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/index.html
@@ -29,8 +29,7 @@
 <section class="user-kh">
     <div class="head-kh">
         <div class="kh-tx">
-            <!--<span><img ms-src="/ViewV5/Base/DownFile.aspx?fileId={{userData.QYinfo.LogoID}}" onerror="javascript: this.src = '/images/MVimg/Index/CompanyLogo.png'"></span>-->
-            <span><img ms-src="/ViewV5/Base/DownFile.aspx?type=TX&user={{userData.User.UserName}}"></span>
+            <span><img ms-src="{{ComFunJS.getfile()+'&type=TX&user='+userData.User.UserName}}"></span>
         </div>
         <h3 class="user-name">{{userData.User.UserRealName}}</h3>
         <!-- <h4 class="user-zh">18709836782</h4> -->
@@ -127,8 +126,8 @@
     </div>
 </div>
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
-    <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
+    <script src="/View_Mobile/JS/ComFunJS.js?jsver=20171225"></script>
     <script type="text/javascript">
         var model = avalon.define({
             $id: "crmview",
